Updated usage style

--- a/examples/components/test.html
+++ b/examples/components/test.html
@@ -27,6 +27,7 @@
   <!--- Component JS -->
   <script src="../assets/library/jquery.min.js"></script>
   <script src="../assets/library/iframe-content.js"></script>
+  <script type="text/javascript" src="../../dist/components/vs.js"></script>
   <script type="text/javascript" src="../../dist/components/popup.js"></script>
   <script type="text/javascript" src="../../dist/components/dimmer.js"></script>
   <script type="text/javascript" src="../../dist/components/rating.js"></script>
@@ -50,7 +51,7 @@
         on: 'hover'
       });
       
-      var ratings = VsRating('.star.rating');
+      var ratings = vs.rating('.star.rating');
       
       $('.card .dimmer')
         .dimmer({
