Removed jQuery from dimmer.js

--- a/examples/components/card.html
+++ b/examples/components/card.html
@@ -49,9 +49,7 @@
       $('.special.card .image').dimmer({
         on: 'hover'
       });
-      $('.star.rating')
-        .rating()
-      ;
+      vs.rating('.star.rating');
       $('.card .dimmer')
         .dimmer({
           on: 'hover'
