--- a/examples/components/test.html
+++ b/examples/components/test.html
@@ -53,10 +53,7 @@
           key: "accepts-cookies",
           value: true
         }),
-        dimmer = vs.dimmer(".special.card .image", {
-          on: 'hover'
-        }),
-        dimmer2 = vs.dimmer(".card .dimmer", {
+        dimmer = vs.dimmer(".card .dimmer", {
           on: 'hover'
         });
   });
@@ -70,6 +67,83 @@
     We use cookies to ensure you get the best experience on our website
   </span>
   <i class="close icon"></i>
+</div>
+
+<div class="ui four cards">
+  <div class="ui card">
+    <div class="image">
+      <div class="ui blurring inverted dimmer">
+        <div class="content">
+          <div class="center">
+            <div class="ui teal button">Add Friend</div>
+          </div>
+        </div>
+      </div>
+      <img src="../assets/images/wireframe/image.png">
+    </div>
+    <div class="content">
+      <div class="header">Title</div>
+      <div class="meta">
+        <a class="group">Meta</a>
+      </div>
+      <div class="description">One or two sentence description that may go to several lines</div>
+    </div>
+    <div class="extra content">
+      <a class="right floated created">Arbitrary</a>
+      <a class="friends">
+        Arbitrary</a>
+    </div>
+  </div>
+  <div class="ui card">
+    <div class="blurring dimmable image">
+      <div class="ui dimmer">
+        <div class="content">
+          <div class="center">
+            <div class="ui inverted button">Call to Action</div>
+          </div>
+        </div>
+      </div>
+      <img src="../assets/images/wireframe/image.png">
+    </div>
+    <div class="content">
+      <a class="header">Name</a>
+      <div class="meta">
+        <span class="date">Date</span>
+      </div>
+    </div>
+    <div class="extra content">
+      <a>
+        <i class="users icon"></i>
+        Users
+      </a>
+    </div>
+  </div>
+  <div class="ui card">
+    <div class="ui slide right reveal image">
+      <div class="visible content">
+        <img class="ui fluid image" src="../assets/images/avatar/nan.jpg">
+      </div>
+      <div class="hidden content">
+        <img class="ui fluid image" src="../assets/images/avatar/tom.jpg">
+      </div>
+    </div>
+    <div class="content">
+      <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+    </div>
+  </div>
+  <div class="ui card">
+    <div class="ui move reveal image">
+      <div class="visible content">
+        <img class="ui fluid image" src="../assets/images/avatar/tom.jpg">
+      </div>
+      <div class="hidden content">
+        <img class="ui fluid image" src="../assets/images/avatar/nan.jpg">
+      </div>
+    </div>
+    <div class="content">
+      <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+    </div>
+  </div>
 </div>
 
 <div class="ui four cards">
