Removed jQuery from progress + other updates

--- a/examples/components/card.html
+++ b/examples/components/card.html
@@ -49,7 +49,7 @@
       $('.special.card .image').dimmer({
         on: 'hover'
       });
-      vs.rating('.star.rating');
+      ui.rating('.star.rating');
       $('.card .dimmer')
         .dimmer({
           on: 'hover'
