--- a/src/definitions/views/ad.less
+++ b/src/definitions/views/ad.less
@@ -1,7 +1,6 @@
 /*!
- * # Semantic UI - Ad
- * http://github.com/semantic-org/semantic-ui/
- *
+ * # Vanilla Semantic UI - Ad
+ * https://github.com/morganbarrett/Vanilla-Semantic-UI/
  *
  * Copyright 2013 Contributors
  * Released under the MIT license
