--- a/src/definitions/views/comment.less
+++ b/src/definitions/views/comment.less
@@ -1,7 +1,6 @@
 /*!
- * # Semantic UI - Comment
- * http://github.com/semantic-org/semantic-ui/
- *
+ * # Vanilla Semantic UI - Comment
+ * https://github.com/morganbarrett/Vanilla-Semantic-UI/
  *
  * Released under the MIT license
  * http://opensource.org/licenses/MIT
