--- a/src/definitions/views/item.less
+++ b/src/definitions/views/item.less
@@ -1,7 +1,6 @@
 /*!
- * # Semantic UI - Item
- * http://github.com/semantic-org/semantic-ui/
- *
+ * # Vanilla Semantic UI - Item
+ * https://github.com/morganbarrett/Vanilla-Semantic-UI/
  *
  * Released under the MIT license
  * http://opensource.org/licenses/MIT
