--- a/src/definitions/views/statistic.less
+++ b/src/definitions/views/statistic.less
@@ -1,7 +1,6 @@
 /*!
- * # Semantic UI - Statistic
- * http://github.com/semantic-org/semantic-ui/
- *
+ * # Vanilla Semantic UI - Statistic
+ * https://github.com/morganbarrett/Vanilla-Semantic-UI/
  *
  * Released under the MIT license
  * http://opensource.org/licenses/MIT
